Fixed padding on mobile menu items

--- a/public/css/bootstrap-overrides.css
+++ b/public/css/bootstrap-overrides.css
@@ -206,4 +206,8 @@ a > h3 {
 		text-align: center;
 	}
 
+	.navbar-nav > li > a  {
+		padding: 10px 20px;
+	}
+
 }
